# daily-report

./: .gitignore  .gitignore 2  2024-12-25.csv  Dockerfile  README 2.md  README.md  main 2.spec  main.py  main.spec  pyproject.toml  uv.lock.backup
.git_backup_before_ref_fix/: ORIG_HEAD  config
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: Flet Windows based fletbuild.yml  artifacts_cleanup.yml  build-flet-cross.yml  main.yml  main2.yml  pack.yml  remove_old_artifacts.yml
app/: 2024-10-25.csv  2024-11-12.csv  2024-11-22.csv  2024-11-23.csv  2024-11-24.csv  2024-11-26.csv  2024-11-29.csv  2024-11-30.csv  2024-12-05.csv  2024-12-09.csv  2024-12-14.csv  2024-12-15.csv  2024-12-24.csv  2024-12-25.csv  TextFile1.txt  TextFile2.txt  chart_page.py  layout.py  main.py  output.csv  outputのコピー4.csv  requirements.txt  setting_page.py  test.py  timelime.db  timelime.db-journal  timeline_page.py  timeline_page2.py
app/components/: compoments_chart.py  compoments_graph.py  components.py  components_setting.py
app/handlers/: 2024-12-09.csv  drag_leave 2.py  drag_leave.py  drag_move.py  drag_move_add.py  handdrag_will_accept 2.py  handdrag_will_accept.py  handlers.py  handlersMain.py  handlers_chart.py  handlers_setting.py  pageScroll.py  reload_data.py
output_csv/: 2024-12-23.csv  2025-01-14name16.csv  2025-1-12name15.csv  2025-1-25name15.csv  2025-2-3name15.csv  2025-2-3name16.csv  2025-2-3name18.csv
src/: TextFile1.txt  TextFile2.txt  __init__.py  generated-b365df0f794b5c01597fc5da8788910519669cef93d8c1589658621fe0181482.icns  main.py  requirements.txt
(+125 files in other folders)
